--- a/LiveChartsWPFTest/SimpleLiveChart/SimpleLiveChart/MainWindow.xaml
+++ b/LiveChartsWPFTest/SimpleLiveChart/SimpleLiveChart/MainWindow.xaml
@@ -20,7 +20,11 @@
             <RowDefinition Height="2*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <lvc:CartesianChart Series="{Binding Collection}" Grid.ColumnSpan="2" Margin="10" />
+        <lvc:CartesianChart Grid.ColumnSpan="2" Margin="10" >
+            <lvc:CartesianChart.Series>
+                <lvc:ScatterSeries Title="Series A" Values="{Binding ValuesA}" />
+            </lvc:CartesianChart.Series>
+        </lvc:CartesianChart>
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
