--- a/LiveChartsWPFTest/SimpleLiveChart/SimpleLiveChart/MainWindow.xaml
+++ b/LiveChartsWPFTest/SimpleLiveChart/SimpleLiveChart/MainWindow.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
         <lvc:CartesianChart Grid.ColumnSpan="2" Margin="10" >
             <lvc:CartesianChart.Series>
-                <lvc:ScatterSeries Title="Series A" Values="{Binding ValuesA}" />
+                <lvc:LineSeries Title="Series A" Values="{Binding ValuesA}" Fill="Transparent" />
             </lvc:CartesianChart.Series>
         </lvc:CartesianChart>
         <Grid Grid.Row="1" Grid.Column="0">
